# Evergreen

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7c39f94cfd69_initial_schema.py  9a1c7e2b4d10_add_step_url.py
backend/app/: config.py  db.py  deps.py  main.py  roles.py  security.py
backend/app/ai/: client.py  errors.py  prompts.py  redaction.py  schemas.py
backend/app/drift/: scoring.py
backend/app/models/: __init__.py  _base.py  drift_event.py  guide.py  guide_version.py  membership.py  organization.py  project.py  share_link.py  step.py  user.py
backend/app/routers/: auth.py  drift.py  generate.py  guides.py  members.py  projects.py  share.py
backend/app/schemas/: auth.py  drift.py  generate.py  guide.py  member.py  project.py  share.py
backend/scripts/: ai_eval.py  ai_eval_golden.json
backend/tests/: conftest.py  test_ai_client.py  test_ai_eval_importable.py  test_ai_redaction.py  test_ai_redraft.py  test_ai_schemas.py  test_auth.py  test_cors.py  test_drift.py  test_drift_accept_apply.py  test_drift_flag.py  test_drift_observe.py  test_drift_scoring.py  test_generate.py  test_guides.py  test_isolation.py  test_members.py  test_models.py  test_observable_steps.py  test_projects.py  test_roles.py  test_security.py  test_share.py  test_step_url.py  test_versions.py
backend/tests/support/: fake_ai.py
extension/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/: Dockerfile  README.md  (+6 more)
(+62 files in other folders)
